# nuditydetect_service

./: .gitignore  default_config.py  huawei.yaml  nuditydetecct_service_pre.yaml  nuditydetecct_service_product.yaml  nuditydetecct_service_test.yaml  service_name  url.txt
src/: CMakeLists.txt  Dockerfile  ai_model.cpp  ai_model.h  apollo_conf.h  crow_all.h  image_interface.cpp  image_interface.h  image_operation.cpp  image_operation.h  init_server.cpp  init_server.h  microservice_demo.cpp  microservice_demo.h  service_error.h  service_main.cpp  tal_interface.cpp  tal_interface.h
src/Paas/: .dete_reg.cpp.swp  1  HMAC_SHA1.cpp  HMAC_SHA1.h  SHA1.cpp  SHA1.h  ThreadPool.cpp  ThreadPool.h  base64.cpp  base64.h  curl_tool.h  dete_reg.cpp  dete_reg.h  dete_reg.h_1  paas_common.cpp  paas_common.h  types.h
src/ai_model/: conaninfo.txt  conanmanifest.txt  generate_trt.sh  performance_run_gpu.sh  performance_testing.txt  testing_images.txt  version.md
src/ai_model/demo/: CMakeLists.txt  demo.cpp
src/ai_model/include/: cls_image_nudity.hpp
src/ai_model/lib/: libcudnn.so.8  libcurl.so.4  libnvonnxparser.so.7.2.2
src/base/: CMakeLists.txt  cmake_install.cmake  logging.cc  logging.h
src/base/threading/: thread.h
src/breakpad/: CMakeLists.txt  Makefile  cmake_install.cmake
src/common/: ali_oss_client.cpp  ali_oss_client.h  apollo_client.cpp  apollo_client.h  base_error.cpp  base_error.h  conf_param.cpp  conf_param.h  data_flow.cpp  data_flow.h  distribute_lock.cpp  distribute_lock.h  file_download.cpp  file_download.h  kafka_client.cpp  kafka_client.h  mysql_conn_pool.cpp  mysql_conn_pool.h  mysql_operation.cpp  mysql_operation.h  redis_conn_pool.cpp  redis_conn_pool.h  redlock.cpp  redlock.h
src/config/: config.ini
src/scripts/: ReadMe.txt  build.sh  build_tar.gz.sh  getDumpTxt.sh  install.sh  requirments.sh
