cmake_minimum_required(VERSION 3.10)

project(breakpad)

include_directories(src)
include_directories(src/client/linux/handler)
include_directories(src/client/linux/dump_writer_common)
include_directories(src/client/linux/minidump_writer)
include_directories(src/client/linux/crash_generation)
include_directories(src/common/linux)
include_directories(src/google_breakpad/common)
include_directories(src/common)
include_directories(src/processor)
include_directories(src/third_party/lss)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fPIC")


add_library(breakpad SHARED 
	src/google_breakpad/common/breakpad_types.h 
src/google_breakpad/common/minidump_format.h 
src/google_breakpad/common/minidump_size.h 
src/google_breakpad/processor/basic_source_line_resolver.h 
src/google_breakpad/processor/call_stack.h 
src/google_breakpad/processor/code_module.h 
src/google_breakpad/processor/code_modules.h 
src/google_breakpad/processor/dump_context.h 
src/google_breakpad/processor/dump_object.h 
src/google_breakpad/processor/exploitability.h 
src/google_breakpad/processor/fast_source_line_resolver.h 
src/google_breakpad/processor/memory_region.h 
src/google_breakpad/processor/microdump.h 
src/google_breakpad/processor/microdump_processor.h 
src/google_breakpad/processor/minidump.h 
src/google_breakpad/processor/minidump_processor.h 
src/google_breakpad/processor/process_result.h 
src/google_breakpad/processor/process_state.h 
src/google_breakpad/processor/proc_maps_linux.h 
src/google_breakpad/processor/source_line_resolver_base.h 
src/google_breakpad/processor/source_line_resolver_interface.h 
src/google_breakpad/processor/stack_frame.h 
src/google_breakpad/processor/stack_frame_cpu.h 
src/google_breakpad/processor/stack_frame_symbolizer.h 
src/google_breakpad/processor/stackwalker.h 
src/google_breakpad/processor/symbol_supplier.h 
src/google_breakpad/processor/system_info.h 
src/processor/address_map-inl.h 
src/processor/address_map.h 
src/processor/basic_code_module.h 
src/processor/basic_code_modules.cc 
src/processor/basic_code_modules.h 
src/processor/basic_source_line_resolver_types.h 
src/processor/basic_source_line_resolver.cc 
src/processor/call_stack.cc 
src/processor/cfi_frame_info.cc 
src/processor/cfi_frame_info.h 
src/processor/contained_range_map-inl.h 
src/processor/contained_range_map.h 
src/processor/convert_old_arm64_context.cc 
src/processor/convert_old_arm64_context.h 
src/processor/disassembler_x86.h 
src/processor/disassembler_x86.cc 
src/processor/dump_context.cc 
src/processor/dump_object.cc 
src/processor/exploitability.cc 
src/processor/exploitability_linux.h 
src/processor/exploitability_linux.cc 
src/processor/exploitability_win.h 
src/processor/exploitability_win.cc 
src/processor/fast_source_line_resolver_types.h 
src/processor/fast_source_line_resolver.cc 
src/processor/linked_ptr.h 
src/processor/logging.h 
src/processor/logging.cc 
src/processor/map_serializers-inl.h 
src/processor/map_serializers.h 
src/processor/microdump.cc 
src/processor/microdump_processor.cc 
src/processor/minidump.cc 
src/processor/minidump_processor.cc 
src/processor/module_comparer.cc 
src/processor/module_comparer.h 
src/processor/module_factory.h 
src/processor/module_serializer.cc 
src/processor/module_serializer.h 
src/processor/pathname_stripper.cc 
src/processor/pathname_stripper.h 
src/processor/postfix_evaluator-inl.h 
src/processor/postfix_evaluator.h 
src/processor/process_state.cc 
src/processor/proc_maps_linux.cc 
src/processor/range_map-inl.h 
src/processor/range_map.h 
src/processor/simple_serializer-inl.h 
src/processor/simple_serializer.h 
src/processor/simple_symbol_supplier.cc 
src/processor/simple_symbol_supplier.h 
src/processor/windows_frame_info.h 
src/processor/source_line_resolver_base_types.h 
src/processor/source_line_resolver_base.cc 
src/processor/stack_frame_cpu.cc 
src/processor/stack_frame_symbolizer.cc 
src/processor/stackwalker.cc 
src/processor/stackwalker_amd64.cc 
src/processor/stackwalker_amd64.h 
src/processor/stackwalker_arm.cc 
src/processor/stackwalker_arm.h 
src/processor/stackwalker_arm64.cc 
src/processor/stackwalker_arm64.h 
src/processor/stackwalker_address_list.cc 
src/processor/stackwalker_address_list.h 
src/processor/stackwalker_mips.cc 
src/processor/stackwalker_mips.h 
src/processor/stackwalker_ppc.cc 
src/processor/stackwalker_ppc.h 
src/processor/stackwalker_ppc64.cc 
src/processor/stackwalker_ppc64.h 
src/processor/stackwalker_sparc.cc 
src/processor/stackwalker_sparc.h 
src/processor/stackwalker_x86.cc 
src/processor/stackwalker_x86.h 
src/processor/static_address_map-inl.h 
src/processor/static_address_map.h 
src/processor/static_contained_range_map-inl.h 
src/processor/static_contained_range_map.h 
src/processor/static_map_iterator-inl.h 
src/processor/static_map_iterator.h 
src/processor/static_map-inl.h 
src/processor/static_map.h 
src/processor/static_range_map-inl.h 
src/processor/static_range_map.h 
src/processor/symbolic_constants_win.cc 
src/processor/symbolic_constants_win.h 
src/processor/tokenize.cc 
src/processor/tokenize.h
	)

add_library(breakpad_client SHARED
src/client/linux/crash_generation/crash_generation_client.cc 
src/client/linux/crash_generation/crash_generation_server.cc 
src/client/linux/dump_writer_common/thread_info.cc 
src/client/linux/dump_writer_common/ucontext_reader.cc 
src/client/linux/handler/exception_handler.cc 
src/client/linux/handler/exception_handler.h 
src/client/linux/handler/minidump_descriptor.cc 
src/client/linux/handler/minidump_descriptor.h 
src/client/linux/log/log.cc 
src/client/linux/log/log.h 
src/client/linux/microdump_writer/microdump_writer.cc 
src/client/linux/microdump_writer/microdump_writer.h 
src/client/linux/minidump_writer/linux_core_dumper.cc 
src/client/linux/minidump_writer/linux_dumper.cc 
src/client/linux/minidump_writer/linux_ptrace_dumper.cc 
src/client/linux/minidump_writer/minidump_writer.cc 
src/client/minidump_file_writer-inl.h 
src/client/minidump_file_writer.cc 
src/client/minidump_file_writer.h 
src/common/convert_UTF.c 
src/common/convert_UTF.h 
src/common/md5.cc 
src/common/md5.h 
src/common/string_conversion.cc 
src/common/string_conversion.h 
src/common/linux/elf_core_dump.cc 
src/common/linux/elfutils.cc 
src/common/linux/elfutils.h 
src/common/linux/file_id.cc 
src/common/linux/file_id.h 
src/common/linux/guid_creator.cc 
src/common/linux/guid_creator.h 
src/common/linux/linux_libc_support.cc 
src/common/linux/memory_mapped_file.cc 
src/common/linux/safe_readlink.cc
)

target_link_libraries(breakpad_client pthread)

add_library(disasm SHARED
src/third_party/libdisasm/ia32_implicit.c 
src/third_party/libdisasm/ia32_implicit.h 
src/third_party/libdisasm/ia32_insn.c 
src/third_party/libdisasm/ia32_insn.h 
src/third_party/libdisasm/ia32_invariant.c 
src/third_party/libdisasm/ia32_invariant.h 
src/third_party/libdisasm/ia32_modrm.c 
src/third_party/libdisasm/ia32_modrm.h 
src/third_party/libdisasm/ia32_opcode_tables.c 
src/third_party/libdisasm/ia32_opcode_tables.h 
src/third_party/libdisasm/ia32_operand.c 
src/third_party/libdisasm/ia32_operand.h 
src/third_party/libdisasm/ia32_reg.c 
src/third_party/libdisasm/ia32_reg.h 
src/third_party/libdisasm/ia32_settings.c 
src/third_party/libdisasm/ia32_settings.h 
src/third_party/libdisasm/libdis.h 
src/third_party/libdisasm/qword.h 
src/third_party/libdisasm/x86_disasm.c 
src/third_party/libdisasm/x86_format.c 
src/third_party/libdisasm/x86_imm.c 
src/third_party/libdisasm/x86_imm.h 
src/third_party/libdisasm/x86_insn.c 
src/third_party/libdisasm/x86_misc.c 
src/third_party/libdisasm/x86_operand_list.c 
src/third_party/libdisasm/x86_operand_list.h
)

add_executable(microdump_stackwalk
	src/processor/microdump_stackwalk.cc
src/common/path_helper.cc
src/processor/basic_code_modules.cc
src/processor/basic_source_line_resolver.cc
src/processor/call_stack.cc
src/processor/convert_old_arm64_context.cc
src/processor/cfi_frame_info.cc
src/processor/disassembler_x86.cc
src/processor/dump_context.cc
src/processor/dump_object.cc
src/processor/logging.cc
src/processor/microdump.cc
src/processor/microdump_processor.cc
src/processor/pathname_stripper.cc
src/processor/process_state.cc
src/processor/simple_symbol_supplier.cc
src/processor/source_line_resolver_base.cc
src/processor/stack_frame_cpu.cc
src/processor/stack_frame_symbolizer.cc
src/processor/stackwalk_common.cc
src/processor/stackwalker.cc
	src/processor/stackwalker_address_list.cc
src/processor/stackwalker_amd64.cc
src/processor/stackwalker_arm.cc
src/processor/stackwalker_arm64.cc
src/processor/stackwalker_mips.cc
src/processor/stackwalker_ppc.cc
src/processor/stackwalker_ppc64.cc
src/processor/stackwalker_sparc.cc
src/processor/stackwalker_x86.cc
src/processor/tokenize.cc)

target_link_libraries(microdump_stackwalk
disasm)

add_executable(minidump_dump
	src/processor/minidump_dump.cc
src/processor/basic_code_modules.cc
src/processor/convert_old_arm64_context.cc
src/processor/dump_context.cc
src/processor/dump_object.cc
src/processor/logging.cc
src/processor/minidump.cc
src/processor/pathname_stripper.cc
src/processor/proc_maps_linux.cc)


add_executable(minidump_stackwalk
	src/processor/minidump_stackwalk.cc
src/common/path_helper.cc
src/processor/basic_code_modules.cc
src/processor/basic_source_line_resolver.cc
src/processor/call_stack.cc
src/processor/cfi_frame_info.cc
src/processor/convert_old_arm64_context.cc
src/processor/disassembler_x86.cc
src/processor/dump_context.cc
src/processor/dump_object.cc
src/processor/exploitability.cc
src/processor/exploitability_linux.cc
src/processor/exploitability_win.cc
src/processor/logging.cc
src/processor/minidump.cc
src/processor/minidump_processor.cc
src/processor/pathname_stripper.cc
src/processor/process_state.cc
src/processor/proc_maps_linux.cc
src/processor/simple_symbol_supplier.cc
src/processor/source_line_resolver_base.cc
src/processor/stack_frame_cpu.cc
src/processor/stack_frame_symbolizer.cc
src/processor/stackwalk_common.cc
src/processor/stackwalker.cc
src/processor/stackwalker_address_list.cc
src/processor/stackwalker_amd64.cc
src/processor/stackwalker_sparc.cc
src/processor/stackwalker_x86.cc
src/processor/stackwalker_arm.cc
src/processor/stackwalker_arm64.cc
src/processor/stackwalker_mips.cc
src/processor/stackwalker_ppc.cc
src/processor/stackwalker_ppc64.cc
src/processor/symbolic_constants_win.cc
src/processor/tokenize.cc)

target_link_libraries(minidump_stackwalk
disasm)

add_executable(core2md
src/tools/linux/core2md/core2md.cc)

target_link_libraries(core2md
	breakpad_client)

add_definitions(-DHAVE_CONFIG_H)

add_executable(dump_syms
	src/common/dwarf_cfi_to_module.cc
src/common/dwarf_cu_to_module.cc
src/common/dwarf_line_to_module.cc
src/common/dwarf_range_list_handler.cc
src/common/language.cc
src/common/module.cc
src/common/path_helper.cc
src/common/stabs_reader.cc
src/common/stabs_to_module.cc
src/common/dwarf/bytereader.cc
src/common/dwarf/dwarf2diehandler.cc
src/common/dwarf/dwarf2reader.cc
src/common/dwarf/elf_reader.cc
src/common/linux/crc32.cc
src/common/linux/dump_symbols.cc
src/common/linux/dump_symbols.h
src/common/linux/elf_symbols_to_module.cc
src/common/linux/elf_symbols_to_module.h
src/common/linux/elfutils.cc
src/common/linux/file_id.cc
src/common/linux/linux_libc_support.cc
src/common/linux/memory_mapped_file.cc
src/common/linux/safe_readlink.cc
src/tools/linux/dump_syms/dump_syms.cc)

target_link_libraries(dump_syms breakpad_client)

add_executable(minidump-2-core
	src/common/linux/memory_mapped_file.cc
src/common/path_helper.cc
src/tools/linux/md2core/minidump-2-core.cc
src/tools/linux/md2core/minidump_memory_range.h)

#target_link_libraries(minidump-2-core
#breakpad
#breakpad_client
#disasm)

add_executable(minidump_upload
	src/common/linux/http_upload.cc
src/tools/linux/symupload/minidump_upload.cc)

target_link_libraries(minidump_upload
dl)

add_executable(sym_upload
	src/common/linux/http_upload.cc
src/common/linux/http_upload.h
src/common/linux/symbol_upload.cc
src/common/linux/symbol_upload.h
src/tools/linux/symupload/sym_upload.cc)

target_link_libraries(sym_upload
dl)
